@@ -11,13 +11,10 @@ from base64 import b64decode
 from email.MIMEBase import MIMEBase
 from email.MIMEMultipart import MIMEMultipart
 from optparse import OptionParser
-try:
-    import simplejson as json
-except ImportError:
-    import json # Python 2.6
 import sys
 
 from couchdb import __version__ as VERSION
+from couchdb import json
 from couchdb.client import Database
 from couchdb.multipart import write_multipart
 
@@ -29,42 +26,43 @@ def dump_db(dburl, username=None, password=None, boundary=None,
         db.resource.http.add_credentials(username, password)
 
     envelope = write_multipart(output)
-    #envelope = MIMEMultipart('mixed', boundary)
 
     for docid in db:
         doc = db.get(docid, attachments=True)
         print>>sys.stderr, 'Dumping document %r' % doc.id
         attachments = doc.pop('_attachments', {})
-        jsondoc = json.dumps(doc, sort_keys=True, indent=2)
+        jsondoc = json.encode(doc)
 
         if attachments:
-            inner = envelope.start({
+            parts = envelope.open({
                 'Content-ID': doc.id,
                 'ETag': '"%s"' % doc.rev
             })
-            part = inner.add('application/json', jsondoc)
+            parts.add('application/json', jsondoc)
 
             for name, info in attachments.items():
                 content_type = info.get('content_type')
                 if content_type is None: # CouchDB < 0.8
                     content_type = info.get('content-type')
-                subpart = inner.add(content_type, b64decode(info['data']), {
+                parts.add(content_type, b64decode(info['data']), {
                     'Content-ID': name
                 })
-            inner.end()
+            parts.close()
 
         else:
-            part = envelope.add('application/json', jsondoc, {
+            envelope.add('application/json', jsondoc, {
                 'Content-ID': doc.id,
                 'ETag': '"%s"' % doc.rev
             }, )
 
-    # XXX Is something supposed to happen here?
-    #envelope.end()
+    envelope.close()
 
 
 def main():
     parser = OptionParser(usage='%prog [options] dburl', version=VERSION)
+    parser.add_option('--json-module', action='store', dest='json_module',
+                      help='the JSON module to use ("simplejson", "cjson", '
+                            'or "json" are supported)')
     parser.add_option('-u', '--username', action='store', dest='username',
                       help='the username to use for authentication')
     parser.add_option('-p', '--password', action='store', dest='password',
@@ -74,6 +72,9 @@ def main():
 
     if len(args) != 1:
         return parser.error('incorrect number of arguments')
+
+    if options.json_module:
+        json.use(options.json_module)
 
     dump_db(args[0], username=options.username, password=options.password)
 
